--- a/cigionline/static/css/cards/_card_small.scss
+++ b/cigionline/static/css/cards/_card_small.scss
@@ -245,16 +245,15 @@
       display: flex;
       flex-direction: column;
       height: 100%;
+      align-items: normal;
     }
-    align-items: normal;
+    align-items: center;
 
     .card__image {
-      @include media-breakpoint-up(sm) {
-        padding: 0 3em 0 0;
-      }
       @include media-breakpoint-up(md) {
         flex: none;
         padding: 0 2em 2em;
+        flex: 0 0 50%;
       }
       @include media-breakpoint-up(lg) {
         padding: 0 3.25em 2em;
@@ -266,7 +265,7 @@
         padding: 0 5em 2em;
       }
       padding: 0 1em 0 0;
-      flex: 0 0 50%;
+      flex: 0 0 33.333333%;
     }
   }
 
@@ -277,6 +276,13 @@
     height: 100%;
     border-radius: 20px;
     padding: 1em 1.5em 0.5em;
+
+    .card__image {
+      @include media-breakpoint-up(md) {
+        display: block;
+      }
+      display: none;
+    }
   }
 
   &.card--small--event {
